--- a/hello.ipynb
+++ b/hello.ipynb
@@ -407,6 +407,55 @@
    "source": [
     "print(\"Hello World!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Boy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hi, Boy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\left(\\frac{6 \\sigma \\left(\\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)} + 1\\right) \\sin{\\left(\\sigma \\right)} \\tan{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\cot{\\left(2 \\sigma \\right)} \\csc{\\left(2 \\sigma \\right)} \\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{3 \\sigma \\sin^{2}{\\left(\\sigma \\right)}}{\\cos^{2}{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{3 \\sigma}{\\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{3 \\sin{\\left(\\sigma \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}}\\right) \\sin{\\left(\\sigma \\right)} & \\left(\\frac{6 \\sigma \\left(\\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)} + 1\\right) \\sin{\\left(\\sigma \\right)} \\tan{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\cot{\\left(2 \\sigma \\right)} \\csc{\\left(2 \\sigma \\right)} \\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{3 \\sigma \\sin^{2}{\\left(\\sigma \\right)}}{\\cos^{2}{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{3 \\sigma}{\\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{3 \\sin{\\left(\\sigma \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}}\\right) \\cos{\\left(2 \\sigma \\right)}\\\\\\frac{12 \\sigma \\left(\\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)} + 1\\right) \\sin{\\left(\\sigma \\right)} \\tan{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\cot{\\left(2 \\sigma \\right)} \\csc{\\left(2 \\sigma \\right)} \\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{6 \\sigma \\sin^{2}{\\left(\\sigma \\right)}}{\\cos^{2}{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{6 \\sigma}{\\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{6 \\sin{\\left(\\sigma \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} & \\frac{204 \\sigma \\left(\\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)} + 1\\right) \\sin{\\left(\\sigma \\right)} \\tan{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\cot{\\left(2 \\sigma \\right)} \\csc{\\left(2 \\sigma \\right)} \\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan^{2}{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{102 \\sigma \\sin^{2}{\\left(\\sigma \\right)}}{\\cos^{2}{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{102 \\sigma}{\\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}} + \\frac{102 \\sin{\\left(\\sigma \\right)}}{\\cos{\\left(\\sigma \\right)} \\tan{\\left(\\sec{\\left(\\csc{\\left(2 \\sigma \\right)} \\right)} \\right)}}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[(6*sigma*(tan(sec(csc(2*sigma)))**2 + 1)*sin(sigma)*tan(csc(2*sigma))*cot(2*sigma)*csc(2*sigma)*sec(csc(2*sigma))/(cos(sigma)*tan(sec(csc(2*sigma)))**2) + 3*sigma*sin(sigma)**2/(cos(sigma)**2*tan(sec(csc(2*sigma)))) + 3*sigma/tan(sec(csc(2*sigma))) + 3*sin(sigma)/(cos(sigma)*tan(sec(csc(2*sigma)))))*sin(sigma), (6*sigma*(tan(sec(csc(2*sigma)))**2 + 1)*sin(sigma)*tan(csc(2*sigma))*cot(2*sigma)*csc(2*sigma)*sec(csc(2*sigma))/(cos(sigma)*tan(sec(csc(2*sigma)))**2) + 3*sigma*sin(sigma)**2/(cos(sigma)**2*tan(sec(csc(2*sigma)))) + 3*sigma/tan(sec(csc(2*sigma))) + 3*sin(sigma)/(cos(sigma)*tan(sec(csc(2*sigma)))))*cos(2*sigma)],\n",
+       "[            12*sigma*(tan(sec(csc(2*sigma)))**2 + 1)*sin(sigma)*tan(csc(2*sigma))*cot(2*sigma)*csc(2*sigma)*sec(csc(2*sigma))/(cos(sigma)*tan(sec(csc(2*sigma)))**2) + 6*sigma*sin(sigma)**2/(cos(sigma)**2*tan(sec(csc(2*sigma)))) + 6*sigma/tan(sec(csc(2*sigma))) + 6*sin(sigma)/(cos(sigma)*tan(sec(csc(2*sigma)))),        204*sigma*(tan(sec(csc(2*sigma)))**2 + 1)*sin(sigma)*tan(csc(2*sigma))*cot(2*sigma)*csc(2*sigma)*sec(csc(2*sigma))/(cos(sigma)*tan(sec(csc(2*sigma)))**2) + 102*sigma*sin(sigma)**2/(cos(sigma)**2*tan(sec(csc(2*sigma)))) + 102*sigma/tan(sec(csc(2*sigma))) + 102*sin(sigma)/(cos(sigma)*tan(sec(csc(2*sigma))))]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import sin, cos, tan, sec, csc, symbols, Matrix\n",
+    "from sympy import *\n",
+    "sigma = symbols('sigma')\n",
+    "sigma\n",
+    "function = sin(sigma)*3*sigma/(cos(sigma)*tan(sec(csc(2*sigma))))\n",
+    "diff(function, sigma)\n",
+    "A = Matrix([[sin(sigma), cos(2*sigma)],[2, 34]])\n",
+    "A*diff(function, sigma)"
+   ]
   }
  ],
  "metadata": {
