This is a Commit dudes

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -456,6 +456,34 @@
     "A = Matrix([[sin(sigma), cos(2*sigma)],[2, 34]])\n",
     "A*diff(function, sigma)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Total Investment in Stock aapl is: 176380.0048828125\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "def invest(money):\n",
+    "    stock_symbol = str(input(\"Enter the Stock Symbol: \"))\n",
+    "    stock_data = yf.Ticker(stock_symbol)\n",
+    "    current_close = stock_data.history(period=\"1d\")\n",
+    "    close_info = current_close['Close'][0]\n",
+    "    invest_amount = money * close_info\n",
+    "    print(f\"Your Total Investment in Stock {stock_symbol} is: {invest_amount}\")\n",
+    "\n",
+    "input_money = int(input(\"Enter the Capital to invest: \"))\n",
+    "invest(input_money)\n"
+   ]
   }
  ],
  "metadata": {
