--- a/hello.ipynb
+++ b/hello.ipynb
@@ -484,6 +484,80 @@
     "input_money = int(input(\"Enter the Capital to invest: \"))\n",
     "invest(input_money)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Current Opening Price of aapl is:  177.38\n",
+      "The Current Closing Price of aapl is:  177.83999633789062\n",
+      "According to your Capital 1000.0 you have invested 5.623032054611777 in the stock\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "import math\n",
+    "\n",
+    "def check_open_close_price(stock_symbol):\n",
+    "    stock = yf.Ticker(stock_symbol)\n",
+    "    current_open_price_info = stock.info[\"open\"]\n",
+    "    current_close_price_info = stock.history(period=\"1d\")['Close'][0]\n",
+    "    print(f\"The Current Opening Price of {stock_symbol} is: \", current_open_price_info)\n",
+    "    print(f\"The Current Closing Price of {stock_symbol} is: \", current_close_price_info)\n",
+    "    return current_open_price_info, current_close_price_info\n",
+    "\n",
+    "def invest(money, close_price):\n",
+    "    shares = money / close_price\n",
+    "    print(f\"According to your Capital {money} you have invested {shares} in the stock\")\n",
+    "input_stock_symbol = str(input(\"Enter the stock symbol: \"))\n",
+    "open_price, close_price = check_open_close_price(input_stock_symbol)\n",
+    "input_money = float(input(\"Enter the Capital which is available to you right now right here: \"))\n",
+    "print(invest(input_money, close_price))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Current Opening Price of aapl is:  177.38\n",
+      "The Current Closing Price of aapl is:  177.0\n",
+      "With the available capital of 1000.0, you can buy 5.65 shares.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "def check_open_close_price(stock_symbol):\n",
+    "    stock = yf.Ticker(stock_symbol)\n",
+    "    current_open_price_info = stock.info[\"open\"]\n",
+    "    current_close_price_info = stock.history(period=\"1d\")['Close'][0]\n",
+    "    print(f\"The Current Opening Price of {stock_symbol} is: \", current_open_price_info)\n",
+    "    print(f\"The Current Closing Price of {stock_symbol} is: \", current_close_price_info)\n",
+    "    return current_open_price_info, current_close_price_info\n",
+    "\n",
+    "def invest(money, close_price):\n",
+    "    shares = money / close_price\n",
+    "    print(f\"With the available capital of {money}, you can buy {shares:.2f} shares.\")\n",
+    "\n",
+    "input_stock_symbol = str(input(\"Enter the Stock Symbol: \"))\n",
+    "open_price, close_price = check_open_close_price(input_stock_symbol)\n",
+    "\n",
+    "input_money = float(input(\"Enter the Capital which is available to you right now: \"))\n",
+    "invest(input_money, close_price)\n"
+   ]
   }
  ],
  "metadata": {
