--- a/hello.ipynb
+++ b/hello.ipynb
@@ -558,6 +558,28 @@
     "input_money = float(input(\"Enter the Capital which is available to you right now: \"))\n",
     "invest(input_money, close_price)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165.202264064 Billion $\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "import math\n",
+    "a = yf.Ticker(\"AMD\")\n",
+    "b = a.info[\"marketCap\"]\n",
+    "c = b / 10**9\n",
+    "print(c,\"Billion $\")"
+   ]
   }
  ],
  "metadata": {
@@ -576,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
